# DREAM-Chunk-Kinetix

./: README.md  pyproject.toml  wmablation_workflow.sh  workflow.sh
src/: eval_flow.py  eval_flow_wm.py  generate_data.py  model.py  train_ebjepa.py  train_expert.py  train_flow.py  train_lewm.py  train_wm.py  train_wm_policyencoder.py
