[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dreamchunk-kinetix"
version = "0.0.1"
authors = [
  { name="Anonymous Authors" }
]
description = ""
requires-python = ">=3.11"
dependencies = [
    "jax[cuda12_pip]>=0.4.36,<0.5",
    "numpy==1.26.4",
    "tyro",
    "einops",
    "pandas",
    "tqdm-loggable",
    "kinetix",
]


[tool.ruff]
line-length = 120

[tool.uv.sources]
kinetix = { path = "third_party/kinetix", editable = true }

[tool.ruff.lint.isort]
force-single-line = true
force-sort-within-sections = true
single-line-exclusions = ["collections.abc", "typing", "typing_extensions"]
known-third-party = ["wandb"]
